<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".Mendaftar"
        android:layout_gravity="center"
        android:background="@drawable/backgroundrounded">
    <TextView
            android:text="@string/isi_sesuai_dengan_siasat"
            android:layout_width="300dp"
            android:id="@+id/textView2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="24sp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/text_Nama_Lengkap"
            android:textColor="@android:color/black"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:paddingTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/roundw"/>
    <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/text_Nama_Lengkap"
            android:hint="@string/nama_lengkap"
            android:autofillHints=""
            tools:targetApi="o"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup_status"
            tools:ignore="RtlHardcoded"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:paddingLeft="10dp"
            android:paddingRight="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/common_google_signin_btn_text_light_focused"
            android:background="@drawable/backgroundrounded"/>
    <RadioGroup
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:id="@+id/radioGroup_status"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_Nama_Lengkap"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/text_kode_dosen"
            tools:ignore="RtlHardcoded"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingLeft="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/backgroundrounded">
        <RadioButton
                android:text="@string/dosen"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="1"
                tools:text="DOSEN"
                android:focusable="auto"
                android:checked="false"
                android:textColor="@android:color/black"/>
        <RadioButton
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="1"
                tools:text="MAHASISWA"
                android:checked="false"
                android:text="@string/mahasiswa"
                android:textColor="@android:color/black"/>
    </RadioGroup>
    <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/text_kode_dosen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:hint="@string/kode_dosen"
            android:selectAllOnFocus="false"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup_status"
            app:layout_constraintBottom_toTopOf="@+id/text_nim"
            android:layout_marginBottom="8dp"
            android:importantForAutofill="no"
            tools:ignore="RtlHardcoded"
            tools:targetApi="o"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:visibility="gone"
            android:layout_marginRight="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/common_google_signin_btn_text_light_focused"
            android:background="@drawable/backgroundrounded"/>
    <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/text_nim"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:hint="@string/nim"
            app:layout_constraintTop_toBottomOf="@+id/text_kode_dosen"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/spinner"
            android:layout_marginBottom="8dp"
            android:importantForAutofill="no"
            tools:ignore="RtlHardcoded"
            tools:targetApi="o"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:visibility="gone"
            android:layout_marginRight="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/common_google_signin_btn_text_light_focused"
            android:background="@drawable/backgroundrounded"/>
    <Spinner
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:id="@+id/spinner"
            app:layout_constraintTop_toBottomOf="@+id/text_nim"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/text_Email"
            android:layout_marginBottom="8dp"
            tools:ignore="RtlHardcoded"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/backgroundrounded"
            android:popupBackground="@drawable/backgroundrounded"/>
    <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/text_Email"
            android:autofillHints=""
            tools:targetApi="o"
            android:hint="@string/email"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/text_Pass"
            android:layout_marginBottom="8dp"
            tools:ignore="RtlHardcoded"
            android:paddingEnd="0dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/common_google_signin_btn_text_light_focused"
            android:background="@drawable/backgroundrounded"/>
    <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/text_Pass"
            android:autofillHints=""
            tools:targetApi="o"
            android:hint="@string/password_min_8_karakter"
            app:layout_constraintTop_toBottomOf="@+id/text_Email"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/daftar"
            android:layout_marginBottom="8dp"
            tools:ignore="RtlHardcoded"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:paddingLeft="10dp"
            android:paddingRight="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/common_google_signin_btn_text_light_focused"
            android:background="@drawable/backgroundrounded"/>
    <Button
            android:text="@string/submit"
            android:id="@+id/daftar"
            android:layout_width="300dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/text_Pass"
            android:layout_marginTop="8dp"
            tools:ignore="RtlHardcoded"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/roundb"
            android:textColor="@android:color/white"/>
</android.support.constraint.ConstraintLayout>