<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="81dp"
            android:layout_marginRight="81dp"
            android:contentDescription="@string/todo"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:srcCompat="@drawable/icon"
            app:layout_constraintHorizontal_bias="0.502"/>
    <android.support.constraint.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/backgroundrounded"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_marginBottom="195dp"
            app:layout_constraintBottom_toBottomOf="parent">
        <EditText
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/loginEmail"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toTopOf="@+id/loginPass"
                app:layout_constraintVertical_chainStyle="packed"
                android:autofillHints=""
                tools:targetApi="o"
                android:hint="@string/email"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:background="@drawable/roundw"
                android:textColor="@android:color/black"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"/>
        <EditText
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/loginPass"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/loginEmail"
                android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
                android:autofillHints=""
                tools:targetApi="o"
                android:hint="@string/password"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:background="@drawable/roundw"
                android:textColor="@android:color/black"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"/>
        <Button

                android:layout_width="300dp"
                android:layout_height="50dp"
                android:id="@+id/buttonLogin"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/loginPass"
                app:layout_constraintVertical_chainStyle="spread"
                android:text="@string/login"
                android:background="@drawable/roundb"
                android:textColor="@android:color/white"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"/>
        <TextView
                android:text="@string/mendaftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="117dp"
                android:layout_marginStart="117dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="117dp"
                android:layout_marginRight="117dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toTopOf="@+id/lupapassword"/>
        <TextView
                android:text="@string/lupa_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lupapassword"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:layout_marginTop="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="104dp"
                android:layout_marginRight="104dp"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="108dp"
                android:layout_marginStart="108dp"/>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>