<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".dosen.TambahKelasD"
        android:layout_gravity="center"
        android:background="@drawable/backgroundrounded">
    <EditText
            android:layout_width="355dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/namakelasdosen"
            android:hint="@string/nama_kelas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/kodekelasdosen"
            android:importantForAutofill="no"
            tools:targetApi="o"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            android:textColor="@android:color/black"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/roundw"
            android:textColorHint="@color/common_google_signin_btn_text_light_focused"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"/>
    <EditText
            android:layout_width="355dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/kodekelasdosen"
            app:layout_constraintTop_toBottomOf="@+id/namakelasdosen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:importantForAutofill="no"
            tools:targetApi="o"
            android:visibility="visible"
            android:layout_marginTop="8dp"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="25dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_alignParentEnd="true"
            android:textColor="@android:color/black"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:hint="@string/kode_kelas"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:background="@drawable/roundw"
            android:textColorHint="@color/common_google_signin_btn_text_light_focused"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            app:layout_constraintBottom_toTopOf="@+id/tambahkelasdosen"
            android:layout_marginBottom="8dp"/>
    <Button
            android:text="@string/tambah_kelas"
            android:layout_height="50dp"
            android:id="@+id/tambahkelasdosen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="visible"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_width="355dp"
            android:layout_marginStart="35dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/white"
            android:background="@drawable/roundb"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/kodekelasdosen"/>
</android.support.constraint.ConstraintLayout>