<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".mahasiswa.TambahKelasM"
        android:layout_gravity="center"
        android:background="@drawable/backgroundrounded">
    <EditText
            android:layout_height="50dp"
            android:id="@+id/searchDosen"
            android:inputType=""
            android:layout_width="300dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/listDosen"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary"
            android:importantForAutofill="no"
            tools:targetApi="o"
            android:layout_marginStart="5dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:hint="@string/nama_dosen"
            android:background="@drawable/roundw"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"/>

    <ListView
            android:layout_height="90dp"
            android:id="@+id/listDosen"
            android:layout_width="280dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:scrollbars="vertical"
            android:background="@drawable/background"
            android:visibility="gone"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            app:layout_constraintTop_toBottomOf="@+id/searchDosen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            style="@style/Widget.AppCompat.Light.ListView.DropDown"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
    <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/namakelas"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="70dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="5dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary"
            android:importantForAutofill="no"
            tools:targetApi="o"
            android:layout_marginStart="5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:hint="@string/nama_kelas"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:background="@drawable/roundw"/>
    <ListView
            android:layout_width="280dp"
            android:layout_height="90dp"
            android:layout_alignParentTop="true"
            android:id="@+id/listkelas"
            android:background="@drawable/background"
            android:visibility="gone"
            tools:visibility="gone"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="5dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toBottomOf="@+id/namakelas"
            android:scrollbars="vertical"
            style="@style/Widget.AppCompat.Light.ListView.DropDown"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"/>
    <Button
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:id="@+id/buttonkelas"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:visibility="invisible"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            android:layout_marginTop="130dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="5dp"
            android:layout_marginStart="5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/tambah_kelas"
            android:background="@drawable/roundb"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"/>
</android.support.constraint.ConstraintLayout>